--- a/erp-web-jgsf/src/main/envs/env-dev.properties
+++ b/erp-web-jgsf/src/main/envs/env-dev.properties
@@ -34,8 +34,16 @@ log.dir.infobackup=log_back_up
 log.filesize=5MB
 log.level=DEBUG
 
+#=============login session===========
 #login fail ${login_retry_time}, the login account will be lock for ${login_retry_timeout} times
+#session in redis time
 login_redis_expire=3600
-login_retry_time=5
+#login fail count
+login_retry_time=115
+#user account lock time
 login_retry_timeout=1800000
+#same to web.xml session timeout
 login_session_timeout=3600000
+
+#=============system===================
+allow_cross_domain=*
